# parallel

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  parallel_benchmark.cpp  parallel_benchmark.h  parallel_benchmarkConfig.cmake.in
